force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/echosign_dev1__SIGN_File_Mapping__c.object-meta.xml
<CustomObject>
    <label>File Mapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>File Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>