force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/fields/echosign_dev1__Map_on_Events__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Map_on_Events__c</fullName>
    <label>Map on Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled / Declined</fullName>
            </value>
            <value>
                <fullName>Out for Approval</fullName>
            </value>
            <value>
                <fullName>Out for Signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Signature</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Form-Filled</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Acceptance</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Form-Filling</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Delivery</fullName>
            </value>
            <value>
                <fullName>Out for Acceptance</fullName>
            </value>
            <value>
                <fullName>Out for Form-Filling</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>