force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/fields/echosign_dev1__SIGN_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__SIGN_Object_Mapping__c</fullName>
    <label>Adobe Acrobat Sign Object Mapping</label>
    <referenceTo>echosign_dev1__SIGN_Object_Mapping__c</referenceTo>
    <relationshipLabel>File Mappings</relationshipLabel>
    <relationshipName>File_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>