force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/fields/echosign_dev1__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed Agreement - Merged PDF</fullName>
                <default>true</default>
                <label>Signed Agreement - Merged PDF</label>
            </value>
            <value>
                <fullName>Signed Agreement - Separate PDFs</fullName>
            </value>
            <value>
                <fullName>Audit Trail</fullName>
            </value>
            <value>
                <fullName>Supporting Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>