force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/fields/echosign_dev1__Target_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Target_Document_Type__c</fullName>
    <label>Target Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>echosign_dev1__Document_Types</valueSetName>
    </valueSet>
</CustomField>