force-app/main/default/objects/echosign_dev1__SIGN_File_Mapping__c/fields/echosign_dev1__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attach file directly to object</fullName>
                <default>true</default>
                <label>Attach file directly to object</label>
            </value>
            <value>
                <fullName>Add a reference link to the file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>